fixed flex wrap issue for services page

--- a/app/scss/specificPages/_servicesPage.scss
+++ b/app/scss/specificPages/_servicesPage.scss
@@ -3,6 +3,7 @@
   margin: 20px auto;
   padding: 20px 30px;
   display: flex;
+  flex-wrap: wrap;
   flex-direction: column;
   // justify-content: center;
   align-items: center;
@@ -39,28 +40,28 @@
 .gardening {
   // border: 1px solid;
   padding: 15px;
-  max-width: 23%;
+  max-width: 300px;
   line-height: 20px;
 }
 
 .landscaping {
   // border: 1px solid;
   padding: 15px;
-  max-width: 23%;
+  max-width: 300px;
   line-height: 20px;
 }
 
 .irrigation {
   // border: 1px solid;
   padding: 15px;
-  max-width: 23%;
+  max-width: 300px;
   line-height: 20px;
 }
 
 .rubble {
   // border: 1px solid;
   padding: 15px;
-  max-width: 23%;
+  max-width: 300px;
   line-height: 20px;
 }
 
@@ -71,6 +72,6 @@
 // vectors
 
 .vector {
-  min-width: 100px;
-  min-height: 100px;
+  max-width: 150px;
+  max-height: 150px;
 }
